chore: update maintainer email to maiducthang.it@gmail.com in Chart.yaml and CONTRIBUTING.md

--- a/metrics-accumulator/Chart.yaml
+++ b/metrics-accumulator/Chart.yaml
@@ -16,4 +16,4 @@ sources:
   - https://github.com/ducthangqd1998/charts
 maintainers:
   - name: Thang Mai
-    email: ducthangqd1998@gmail.com 
+    email: maiducthang.it@gmail.com 
