--- a/charts/metrics-accumulator/values.yaml
+++ b/charts/metrics-accumulator/values.yaml
@@ -117,18 +117,28 @@ env: []
 
 # Liveness and readiness probes
 livenessProbe:
-  httpGet:
-    path: /health
-    port: http
-  initialDelaySeconds: 30
-  periodSeconds: 10
+  exec:
+    command:
+      - wget
+      - -O
+      - -
+      - http://localhost:8080
+  initialDelaySeconds: 0
+  periodSeconds: 20
+  timeoutSeconds: 2
+  failureThreshold: 5
 
 readinessProbe:
-  httpGet:
-    path: /ready
-    port: http
-  initialDelaySeconds: 5
-  periodSeconds: 5
+  exec:
+    command:
+      - wget
+      - -O
+      - -
+      - http://localhost:8080
+  initialDelaySeconds: 0
+  periodSeconds: 20
+  timeoutSeconds: 2
+  failureThreshold: 5
 
 # ServiceMonitor configuration for Prometheus Operator
 serviceMonitor:
